actualizacion parte 2
